# slim-ir

./: CMakeLists.txt  IR.cpp  Instructions.cpp  Operand.cpp  README.md  format.sh
include/: IR.h  Instructions.h  Operand.h
